<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <!--item
        android:id="@+id/action_search"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        android:title="@string/search"/-->

    <!--item
        android:id="@+id/action_refresh"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"
        android:title="Refresh" /-->

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/select_popular"
            android:title="@string/popular" />
        <item
            android:id="@+id/select_top_rated"
            android:title="@string/top_rated" />
        <item
            android:id="@+id/select_favorites"
            android:title="@string/favorites" />
    </group>

    <!--item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" /-->

</menu>